# rust-deserializer-bench

./: Cargo.toml  README.md
benches/: deserialize10kusers.rs  deserializeVariables.rs  loop30M.rs  solana10kbench.rs  variableSolana.rs
src/: main.rs
